# gbmoncli

./: Cargo.toml  README.md
rules/: 75-gigabyte-monitor.rules
scripts/: compile-release.sh  install-rules.sh
src/: control.rs  device.rs  lib.rs  main.rs
