[package]
name = "gbmoncli"
description = "A CLI to control your Gigabyte monitor (currently only G27Q)"
version = "0.1.0"
readme = "README.md"
edition = "2018"
repository = "https://github.com/thilobillerbeck/gbmoncli"


# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
rusb = "0.8.1"
byteorder = "1.4.3"
clap = "2.33.3"
structopt = "0.3.22"
serde_json = "1.0.74"
serde = { version = "1.0.133", features = ["derive"] }
